<resources>
    <string name="app_name">Measure</string>
    <string name="subtitle">Material Ruler</string>

    <string name="button_show_pointer">Show Pointer</string>
    <string name="button_hide_pointer">Hide Pointer</string>
    <string name="button_metric">Units</string>
    <string name="button_change_color">Color</string>

    <string name="color_picker_title">Pick a Color</string>
    <string name="random_color">Random Color</string>
    <string name="cancel">Close</string>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="imperial_label">Metric Units</string>
    <string name="metric_label">Imperial Units</string>
    <string name="disabled_message">Shortcut Disabled</string>

    <string name="ruler_is_metric_pref_key">abcmeasurecorp.com.measureit.rulerIsMetric</string>
    <string name="ruler_show_pointer_pref_key">abcmeasurecorp.com.measureit.rulerShowPointer</string>
    <string name="ruler_night_mode_key">abcmeasurecorp.com.measureit.rulerNightMode</string>
</resources>
